# DGRV-digital-gap-tool

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  keycloak-startup.sh  openapi.json  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  rust-backend.yml
auth_middleware/: README.md  claims.rs  config.rs  jwt_validator.rs  middleware.rs
creat_organisation/: README.md  config.rs  keycloak.rs  keycloak_service.rs  models.rs  organizations.rs  routes.rs
doc/: Arc42.md  Database_ER_Diagram.md  Database_ER_Diagram_Update.md  MinIO_Integration.md  assessment_flow_updates.md  consolidated_report_logic.md
frontend/: .env.example  .gitignore  README.md  index.html  openapi.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.lazy.tsx  main.tsx  setupTests.ts
infrastructure/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
infrastructure/keycloak/: realm-export.json
migration/: Cargo.toml
migration/src/: lib.rs  m20240922_000001_create_initial_tables.rs  m20240922_000002_create_remaining_tables.rs  m20240924_000001_add_dimension_weights.rs  m20240924_000002_drop_ease_and_impact_column.rs  m20240924_000003_drop_recommendation_gap_size_columns.rs  m20240924_000004_drop_is_selected_column.rs  m20240924_000005_add_minio_path_to_reports.rs  m20251024_000001_update_schema.rs  m20251103_000001_gap_admin_config.rs  m20251107_000001_align_schema_with_er_diagram.rs  m20251110_110855_drop_state_fields.rs  m20251111_000001_drop_dimension_assessment_id_from_gaps.rs  m20251112_000001_use_timestamptz_for_timestamps.rs  m20251112_104100_alter_states_timestamps_to_timestamptz.rs  m20251112_133500_update_assessments_table.rs  m20251112_135000_add_dimensions_id_to_assessments.rs  m20251112_140000_alter_assessments_status_column.rs  m20251112_141000_remove_user_coop_metadata_from_assessments.rs  m20251112_141500_alter_assessments_timestamps_to_timestamptz.rs  m20251112_142500_update_dimension_assessments_table.rs  m20251112_145500_alter_dimension_assessments_timestamps_to_timestamptz.rs  m20251112_151500_alter_assessments_timestamps_to_timestamptz.rs  m20251113_000001_safely_drop_file_name_column.rs  m20251113_105117_add_recommendation_priority_enum.rs  m20251113_113510_drop_gap_severity_column.rs  m20251113_124851_update_recommendations_timestamps.rs  m20251114_190500_add_gap_id_to_dimension_assessments.rs  m20251115_083637_add_dimension_assessment_id_to_action_items.rs  m20251115_084723_drop_action_plan_tables.rs  m20251115_084826_create_new_action_plan_tables.rs  m20251115_112421_create_gap_severity_enum.rs  m20251115_113323_alter_gap_severity_column_type.rs  m20251119_142500_create_organisation_dimension_table.rs  m20251121_112500_add_coop_and_org_ids_to_assessments.rs  m20251122_000001_create_report_enums.rs  m20251122_000002_add_report_status.rs  m20251203_133800_alter_reports_timestamp_columns.rs  m20251216_104221_add_unique_constraints_to_states.rs  m20251219_000001_add_level_to_states.rs  (+1 more)
scripts/: fetch_openapi.js  generate_ssl.sh  keycloak-provisioning.sh
src/: config.rs  database.rs  error.rs  lib.rs  main.rs
src/api/: middleware.rs  mod.rs  openapi.rs
src/auth/: claims.rs  jwt_validator.rs  middleware.rs  mod.rs
src/entities/: action_items.rs  action_plans.rs  assessment_recommendations.rs  assessments.rs  current_states.rs  desired_states.rs  dimension_assessments.rs  dimensions.rs  gaps.rs  mod.rs  organisation_dimension.rs  recommendations.rs  reports.rs
src/models/: keycloak.rs
src/repositories/: action_items.rs  action_plans.rs  assessment_recommendations.rs  assessments.rs  consolidated_report.rs  current_states.rs  desired_states.rs  dimension_assessments.rs  mod.rs  (+5 more)
templates/: report.html
tests/: integration_test.rs  minio_integration_test.rs  openapi_validation.rs
(+466 files in other folders)
