[package]
name = "dgat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
biscuit = "0.6.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal handling
rust_decimal = { version = "1.0", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
envconfig = "0.10"
dotenv = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Migration
sea-orm-migration = "0.12"
migration = { path = "migration" }
bytes = "1.10.1"
async-trait = "0.1.89"
aws-sdk-s3 = "1.106.0"
aws-config = "1.8.6"
aws-credential-types = "1.2.6"

# OpenAPI / Swagger
utoipa = { version = "4", features = ["chrono", "uuid", "decimal"] }
utoipa-axum = { version = "0.1" }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
openapiv3 = "2.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
config = "0.15.19"
rand = "0.8.5"
http = "1.4.0"
printpdf = "0.7"
tera = "1.19"
base64 = "0.22.1"
headless_chrome = "1.0.18"

[dev-dependencies]
sea-orm = { version = "0.12", features = ["mock"] }
tokio-test = "0.4"
