[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = "0.12"
tokio = { version = "1.0", features = ["full"] }
regex = "1.9.6"

[dependencies.sea-schema]
version = "0.15"
default-features = false
features = [
  "debug-print",
  "with-serde",
  "runtime-tokio-rustls",
  "sqlx-postgres",
]